manually copying kerberos-related stuff from Gary's 'securehbase' branch